Update voting and bagging models

--- a/assignments/03/codes/bagging_model.ipynb
+++ b/assignments/03/codes/bagging_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 138,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -18,14 +18,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [],
       "source": [
         "from sklearn.experimental import enable_iterative_imputer\n",
         "from sklearn.impute import IterativeImputer\n",
         "\n",
-        "# Assuming df is your DataFrame and 'Feature17' has missing values\n",
         "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
         "\n",
         "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
@@ -44,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -56,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 141,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -78,16 +77,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[0.36107555 0.40138866 0.34521766 0.45325601 0.34726945]\n"
+            "[0.43648038 0.46014573 0.38243286 0.45691877 0.51701506]\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import BaggingClassifier\n",
+        "from sklearn.ensemble import BaggingClassifier, ExtraTreesClassifier\n",
         "from sklearn.model_selection import cross_val_score\n",
         "\n",
         "# Initialize model\n",
-        "model = BaggingClassifier()\n",
+        "model = BaggingClassifier(estimator=ExtraTreesClassifier(n_estimators=200, random_state=42), random_state=42)\n",
         "\n",
         "# Train the model on the training data\n",
         "print(cross_val_score(model, X_train, y_train, scoring='f1_macro'))"
