--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -83,30 +83,30 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.84      0.98      0.91        50\n",
-            "           1       0.95      0.97      0.96        98\n",
-            "           2       0.76      0.73      0.74        22\n",
+            "           0       0.89      0.98      0.93        50\n",
+            "           1       0.96      0.97      0.96        98\n",
+            "           2       0.65      0.77      0.71        22\n",
             "           4       0.00      0.00      0.00         1\n",
-            "           5       1.00      0.62      0.77         8\n",
+            "           5       1.00      0.38      0.55         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         1\n",
             "           9       0.00      0.00      0.00         1\n",
-            "          14       0.00      0.00      0.00         1\n",
+            "          14       1.00      1.00      1.00         1\n",
             "          15       0.00      0.00      0.00         1\n",
             "          17       0.00      0.00      0.00         1\n",
             "\n",
             "    accuracy                           0.90       199\n",
-            "   macro avg       0.38      0.36      0.37       199\n",
-            "weighted avg       0.87      0.90      0.88       199\n",
+            "   macro avg       0.46      0.42      0.43       199\n",
+            "weighted avg       0.88      0.90      0.89       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.90      0.92      0.91        50\n",
-            "           1       0.91      0.98      0.94        98\n",
-            "           2       0.88      0.71      0.79        21\n",
+            "           0       0.88      0.92      0.90        50\n",
+            "           1       0.94      0.97      0.95        98\n",
+            "           2       0.64      0.76      0.70        21\n",
             "           4       1.00      1.00      1.00         1\n",
-            "           5       0.56      0.62      0.59         8\n",
+            "           5       0.40      0.25      0.31         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         1\n",
@@ -116,36 +116,35 @@
             "          14       1.00      1.00      1.00         1\n",
             "          15       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.89       199\n",
-            "   macro avg       0.48      0.48      0.48       199\n",
-            "weighted avg       0.87      0.89      0.88       199\n",
+            "    accuracy                           0.88       199\n",
+            "   macro avg       0.45      0.45      0.45       199\n",
+            "weighted avg       0.85      0.88      0.86       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.89      1.00      0.94        49\n",
-            "           1       0.93      0.97      0.95        98\n",
-            "           2       0.70      0.73      0.71        22\n",
+            "           0       0.84      0.96      0.90        49\n",
+            "           1       0.94      0.97      0.95        98\n",
+            "           2       0.69      0.82      0.75        22\n",
             "           3       0.00      0.00      0.00         1\n",
-            "           5       0.80      0.44      0.57         9\n",
+            "           5       1.00      0.33      0.50         9\n",
             "           6       1.00      0.93      0.96        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         2\n",
             "          10       0.00      0.00      0.00         1\n",
             "          13       0.00      0.00      0.00         1\n",
             "          14       0.00      0.00      0.00         1\n",
-            "          15       0.00      0.00      0.00         0\n",
             "\n",
-            "    accuracy                           0.89       199\n",
-            "   macro avg       0.36      0.34      0.34       199\n",
-            "weighted avg       0.86      0.89      0.87       199\n",
+            "    accuracy                           0.88       199\n",
+            "   macro avg       0.41      0.36      0.37       199\n",
+            "weighted avg       0.86      0.88      0.86       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.96      0.98      0.97        50\n",
+            "           0       0.94      1.00      0.97        50\n",
             "           1       0.97      0.97      0.97        97\n",
-            "           2       0.68      0.86      0.76        22\n",
+            "           2       0.67      0.91      0.77        22\n",
             "           3       0.00      0.00      0.00         1\n",
-            "           5       0.67      0.50      0.57         8\n",
+            "           5       1.00      0.50      0.67         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         2\n",
@@ -154,18 +153,18 @@
             "          15       0.00      0.00      0.00         1\n",
             "          16       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.91       199\n",
-            "   macro avg       0.44      0.44      0.44       199\n",
-            "weighted avg       0.89      0.91      0.90       199\n",
+            "    accuracy                           0.92       199\n",
+            "   macro avg       0.46      0.45      0.45       199\n",
+            "weighted avg       0.90      0.92      0.90       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.91      0.98      0.94        50\n",
-            "           1       0.91      0.97      0.94        97\n",
-            "           2       0.75      0.68      0.71        22\n",
+            "           0       0.80      0.96      0.87        50\n",
+            "           1       0.93      0.95      0.94        97\n",
+            "           2       0.72      0.59      0.65        22\n",
             "           3       0.00      0.00      0.00         1\n",
-            "           4       0.50      1.00      0.67         1\n",
-            "           5       0.75      0.38      0.50         8\n",
+            "           4       1.00      1.00      1.00         1\n",
+            "           5       0.80      0.50      0.62         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         1\n",
@@ -173,16 +172,16 @@
             "          14       1.00      1.00      1.00         1\n",
             "          15       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.89       198\n",
-            "   macro avg       0.49      0.50      0.48       198\n",
-            "weighted avg       0.87      0.89      0.88       198\n",
+            "    accuracy                           0.87       198\n",
+            "   macro avg       0.52      0.50      0.51       198\n",
+            "weighted avg       0.85      0.87      0.86       198\n",
             "\n",
-            "[0.36503502 0.47921358 0.34481753 0.43923315 0.48027167]\n"
+            "[0.42929902 0.45077532 0.36936136 0.44798695 0.50640728]\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, RandomForestClassifier, ExtraTreesClassifier, GradientBoostingClassifier\n",
+        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.metrics import f1_score, classification_report, make_scorer\n",
         "from xgboost import XGBClassifier\n",
@@ -192,20 +191,16 @@
         "    return f1_score(y_true, y_pred, average='macro', zero_division=0.0)\n",
         "\n",
         "# Initialize models\n",
-        "bagging_model = BaggingClassifier()\n",
-        "extratrees_model = ExtraTreesClassifier()\n",
-        "xgboost_model = XGBClassifier()\n",
-        "randomforest_model = RandomForestClassifier()\n",
-        "gradboost_model = GradientBoostingClassifier()\n",
+        "bagging_extratrees_model = BaggingClassifier(estimator=ExtraTreesClassifier(random_state=42), random_state=42)\n",
+        "bagging_xgboost_model = BaggingClassifier(estimator=XGBClassifier(random_state=42), random_state=42)\n",
+        "bagging_gradboost_model = BaggingClassifier(estimator=RandomForestClassifier(random_state=42), random_state=42)\n",
         "\n",
         "\n",
         "model = VotingClassifier(\n",
         "    estimators=[\n",
-        "        ('bg', bagging_model),\n",
-        "        ('et', extratrees_model),\n",
-        "        ('xgb', xgboost_model),\n",
-        "        ('rf', randomforest_model),\n",
-        "        ('gb', gradboost_model),\n",
+        "        ('bagging_extratrees', bagging_extratrees_model),\n",
+        "        ('bagging_xgboost', bagging_xgboost_model),\n",
+        "        ('bagging_gradboost', bagging_gradboost_model),\n",
         "    ], voting='hard'\n",
         ")\n",
         "\n",
