--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -83,11 +83,11 @@
           "text": [
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.89      0.98      0.93        50\n",
-            "           1       0.96      0.97      0.96        98\n",
-            "           2       0.65      0.77      0.71        22\n",
-            "           4       0.00      0.00      0.00         1\n",
-            "           5       1.00      0.38      0.55         8\n",
+            "           0       0.88      1.00      0.93        50\n",
+            "           1       0.97      0.98      0.97        98\n",
+            "           2       0.76      0.73      0.74        22\n",
+            "           4       0.50      1.00      0.67         1\n",
+            "           5       1.00      0.62      0.77         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         1\n",
@@ -96,17 +96,17 @@
             "          15       0.00      0.00      0.00         1\n",
             "          17       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.90       199\n",
-            "   macro avg       0.46      0.42      0.43       199\n",
-            "weighted avg       0.88      0.90      0.89       199\n",
+            "    accuracy                           0.92       199\n",
+            "   macro avg       0.51      0.53      0.51       199\n",
+            "weighted avg       0.90      0.92      0.91       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.88      0.92      0.90        50\n",
-            "           1       0.94      0.97      0.95        98\n",
-            "           2       0.64      0.76      0.70        21\n",
+            "           0       0.86      0.96      0.91        50\n",
+            "           1       0.96      0.97      0.96        98\n",
+            "           2       0.73      0.76      0.74        21\n",
             "           4       1.00      1.00      1.00         1\n",
-            "           5       0.40      0.25      0.31         8\n",
+            "           5       0.50      0.38      0.43         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         1\n",
@@ -116,35 +116,36 @@
             "          14       1.00      1.00      1.00         1\n",
             "          15       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.88       199\n",
-            "   macro avg       0.45      0.45      0.45       199\n",
-            "weighted avg       0.85      0.88      0.86       199\n",
+            "    accuracy                           0.89       199\n",
+            "   macro avg       0.46      0.47      0.46       199\n",
+            "weighted avg       0.87      0.89      0.88       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.84      0.96      0.90        49\n",
-            "           1       0.94      0.97      0.95        98\n",
+            "           0       0.85      0.96      0.90        49\n",
+            "           1       0.95      0.97      0.96        98\n",
             "           2       0.69      0.82      0.75        22\n",
             "           3       0.00      0.00      0.00         1\n",
             "           5       1.00      0.33      0.50         9\n",
-            "           6       1.00      0.93      0.96        14\n",
+            "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         2\n",
             "          10       0.00      0.00      0.00         1\n",
             "          13       0.00      0.00      0.00         1\n",
             "          14       0.00      0.00      0.00         1\n",
+            "          15       0.00      0.00      0.00         0\n",
             "\n",
-            "    accuracy                           0.88       199\n",
-            "   macro avg       0.41      0.36      0.37       199\n",
-            "weighted avg       0.86      0.88      0.86       199\n",
+            "    accuracy                           0.89       199\n",
+            "   macro avg       0.37      0.34      0.34       199\n",
+            "weighted avg       0.87      0.89      0.87       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.94      1.00      0.97        50\n",
+            "           0       0.93      1.00      0.96        50\n",
             "           1       0.97      0.97      0.97        97\n",
-            "           2       0.67      0.91      0.77        22\n",
+            "           2       0.74      0.91      0.82        22\n",
             "           3       0.00      0.00      0.00         1\n",
-            "           5       1.00      0.50      0.67         8\n",
+            "           5       0.83      0.62      0.71         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         2\n",
@@ -154,17 +155,17 @@
             "          16       0.00      0.00      0.00         1\n",
             "\n",
             "    accuracy                           0.92       199\n",
-            "   macro avg       0.46      0.45      0.45       199\n",
-            "weighted avg       0.90      0.92      0.90       199\n",
+            "   macro avg       0.46      0.46      0.46       199\n",
+            "weighted avg       0.90      0.92      0.91       199\n",
             "\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       0.80      0.96      0.87        50\n",
-            "           1       0.93      0.95      0.94        97\n",
-            "           2       0.72      0.59      0.65        22\n",
+            "           0       0.86      0.98      0.92        50\n",
+            "           1       0.94      0.96      0.95        97\n",
+            "           2       0.81      0.77      0.79        22\n",
             "           3       0.00      0.00      0.00         1\n",
             "           4       1.00      1.00      1.00         1\n",
-            "           5       0.80      0.50      0.62         8\n",
+            "           5       1.00      0.62      0.77         8\n",
             "           6       1.00      1.00      1.00        14\n",
             "           7       0.00      0.00      0.00         1\n",
             "           8       0.00      0.00      0.00         1\n",
@@ -172,11 +173,11 @@
             "          14       1.00      1.00      1.00         1\n",
             "          15       0.00      0.00      0.00         1\n",
             "\n",
-            "    accuracy                           0.87       198\n",
-            "   macro avg       0.52      0.50      0.51       198\n",
-            "weighted avg       0.85      0.87      0.86       198\n",
+            "    accuracy                           0.91       198\n",
+            "   macro avg       0.55      0.53      0.54       198\n",
+            "weighted avg       0.89      0.91      0.90       198\n",
             "\n",
-            "[0.42929902 0.45077532 0.36936136 0.44798695 0.50640728]\n"
+            "[0.50744018 0.4648373  0.34278684 0.45510191 0.53539966]\n"
           ]
         }
       ],
@@ -191,16 +192,16 @@
         "    return f1_score(y_true, y_pred, average='macro', zero_division=0.0)\n",
         "\n",
         "# Initialize models\n",
-        "bagging_extratrees_model = BaggingClassifier(estimator=ExtraTreesClassifier(random_state=42), random_state=42)\n",
+        "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
         "bagging_xgboost_model = BaggingClassifier(estimator=XGBClassifier(random_state=42), random_state=42)\n",
-        "bagging_gradboost_model = BaggingClassifier(estimator=RandomForestClassifier(random_state=42), random_state=42)\n",
+        "randomforest_model = RandomForestClassifier(random_state=42)\n",
         "\n",
         "\n",
         "model = VotingClassifier(\n",
         "    estimators=[\n",
-        "        ('bagging_extratrees', bagging_extratrees_model),\n",
+        "        ('bagging_extratrees', extratrees_model),\n",
         "        ('bagging_xgboost', bagging_xgboost_model),\n",
-        "        ('bagging_gradboost', bagging_gradboost_model),\n",
+        "        ('bagging_gradboost', randomforest_model),\n",
         "    ], voting='hard'\n",
         ")\n",
         "\n",
