--- a/assignments/03/codes/gradientboost_model.ipynb
+++ b/assignments/03/codes/gradientboost_model.ipynb
@@ -130,7 +130,7 @@
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
         "# Initialize Adaboost model\n",
-        "model = GradientBoostingClassifier(random_state=42)\n",
+        "model = GradientBoostingClassifier(random_state=42, n_estimators=200)\n",
         "\n",
         "# Train the model on the training data\n",
         "model.fit(train_x, train_y)\n",
@@ -170,7 +170,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
