--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -81,108 +81,12 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.88      1.00      0.93        50\n",
-            "           1       0.97      0.98      0.97        98\n",
-            "           2       0.76      0.73      0.74        22\n",
-            "           4       0.50      1.00      0.67         1\n",
-            "           5       1.00      0.62      0.77         8\n",
-            "           6       1.00      1.00      1.00        14\n",
-            "           7       0.00      0.00      0.00         1\n",
-            "           8       0.00      0.00      0.00         1\n",
-            "           9       0.00      0.00      0.00         1\n",
-            "          14       1.00      1.00      1.00         1\n",
-            "          15       0.00      0.00      0.00         1\n",
-            "          17       0.00      0.00      0.00         1\n",
-            "\n",
-            "    accuracy                           0.92       199\n",
-            "   macro avg       0.51      0.53      0.51       199\n",
-            "weighted avg       0.90      0.92      0.91       199\n",
-            "\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.86      0.96      0.91        50\n",
-            "           1       0.96      0.97      0.96        98\n",
-            "           2       0.73      0.76      0.74        21\n",
-            "           4       1.00      1.00      1.00         1\n",
-            "           5       0.50      0.38      0.43         8\n",
-            "           6       1.00      1.00      1.00        14\n",
-            "           7       0.00      0.00      0.00         1\n",
-            "           8       0.00      0.00      0.00         1\n",
-            "           9       0.00      0.00      0.00         1\n",
-            "          11       0.00      0.00      0.00         1\n",
-            "          12       0.00      0.00      0.00         1\n",
-            "          14       1.00      1.00      1.00         1\n",
-            "          15       0.00      0.00      0.00         1\n",
-            "\n",
-            "    accuracy                           0.89       199\n",
-            "   macro avg       0.46      0.47      0.46       199\n",
-            "weighted avg       0.87      0.89      0.88       199\n",
-            "\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.85      0.96      0.90        49\n",
-            "           1       0.95      0.97      0.96        98\n",
-            "           2       0.69      0.82      0.75        22\n",
-            "           3       0.00      0.00      0.00         1\n",
-            "           5       1.00      0.33      0.50         9\n",
-            "           6       1.00      1.00      1.00        14\n",
-            "           7       0.00      0.00      0.00         1\n",
-            "           8       0.00      0.00      0.00         2\n",
-            "          10       0.00      0.00      0.00         1\n",
-            "          13       0.00      0.00      0.00         1\n",
-            "          14       0.00      0.00      0.00         1\n",
-            "          15       0.00      0.00      0.00         0\n",
-            "\n",
-            "    accuracy                           0.89       199\n",
-            "   macro avg       0.37      0.34      0.34       199\n",
-            "weighted avg       0.87      0.89      0.87       199\n",
-            "\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.93      1.00      0.96        50\n",
-            "           1       0.97      0.97      0.97        97\n",
-            "           2       0.74      0.91      0.82        22\n",
-            "           3       0.00      0.00      0.00         1\n",
-            "           5       0.83      0.62      0.71         8\n",
-            "           6       1.00      1.00      1.00        14\n",
-            "           7       0.00      0.00      0.00         1\n",
-            "           8       0.00      0.00      0.00         2\n",
-            "          13       0.00      0.00      0.00         1\n",
-            "          14       1.00      1.00      1.00         1\n",
-            "          15       0.00      0.00      0.00         1\n",
-            "          16       0.00      0.00      0.00         1\n",
-            "\n",
-            "    accuracy                           0.92       199\n",
-            "   macro avg       0.46      0.46      0.46       199\n",
-            "weighted avg       0.90      0.92      0.91       199\n",
-            "\n",
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       0.86      0.98      0.92        50\n",
-            "           1       0.94      0.96      0.95        97\n",
-            "           2       0.81      0.77      0.79        22\n",
-            "           3       0.00      0.00      0.00         1\n",
-            "           4       1.00      1.00      1.00         1\n",
-            "           5       1.00      0.62      0.77         8\n",
-            "           6       1.00      1.00      1.00        14\n",
-            "           7       0.00      0.00      0.00         1\n",
-            "           8       0.00      0.00      0.00         1\n",
-            "          13       0.00      0.00      0.00         1\n",
-            "          14       1.00      1.00      1.00         1\n",
-            "          15       0.00      0.00      0.00         1\n",
-            "\n",
-            "    accuracy                           0.91       198\n",
-            "   macro avg       0.55      0.53      0.54       198\n",
-            "weighted avg       0.89      0.91      0.90       198\n",
-            "\n",
-            "[0.50744018 0.4648373  0.34278684 0.45510191 0.53539966]\n"
+            "[0.45239613 0.47275635 0.38079535 0.46082137 0.51430373]\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier\n",
+        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier, GradientBoostingClassifier\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.metrics import f1_score, classification_report, make_scorer\n",
         "from xgboost import XGBClassifier\n",
@@ -192,20 +96,21 @@
         "\n",
         "# Initialize models\n",
         "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
-        "bagging_xgboost_model = BaggingClassifier(estimator=XGBClassifier(random_state=42), random_state=42)\n",
+        "# bagging_xgboost_model = BaggingClassifier(estimator=XGBClassifier(random_state=42), random_state=42)\n",
         "randomforest_model = RandomForestClassifier(random_state=42)\n",
-        "\n",
+        "graidentboost_model = GradientBoostingClassifier(random_state=42, n_estimators=200)\n",
         "\n",
         "model = VotingClassifier(\n",
         "    estimators=[\n",
         "        ('bagging_extratrees', extratrees_model),\n",
-        "        ('bagging_xgboost', bagging_xgboost_model),\n",
+        "        # ('bagging_xgboost', bagging_xgboost_model),\n",
         "        ('bagging_gradboost', randomforest_model),\n",
+        "        ('gradientboost_model', graidentboost_model)\n",
         "    ], voting='hard'\n",
         ")\n",
         "\n",
         "# Train the model on the training data\n",
-        "cv_f1_score = cross_val_score(model, X_train, y_train, fit_params={'sample_weight': sample_wts}, scoring=make_scorer(report_f1))\n",
+        "cv_f1_score = cross_val_score(model, X_train, y_train, scoring=make_scorer(report_f1))\n",
         "print(cv_f1_score)"
       ]
     }
