--- a/assignments/03/codes/gradientboost_model.ipynb
+++ b/assignments/03/codes/gradientboost_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 21,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -40,52 +40,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
-        "X_train = df_imputed.iloc[:, :-1]\n",
-        "y_train = df_imputed.iloc[:, -1]\n",
-        "scaler = StandardScaler()\n",
-        "X_train = scaler.fit_transform(X_train)"
+        "from sklearn.experimental import enable_iterative_imputer\n",
+        "from sklearn.impute import IterativeImputer\n",
+        "\n",
+        "# Assuming df is your DataFrame and 'Feature17' has missing values\n",
+        "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
+        "\n",
+        "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
+        "# Fit the imputer model on the dataset to learn the data patterns\n",
+        "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
+        "imputer.fit(df_train)\n",
+        "\n",
+        "# Transform the dataset to replace missing values\n",
+        "df_imputed = imputer.transform(df_train)\n",
+        "\n",
+        "# Convert back to a DataFrame\n",
+        "df_imputed = pd.DataFrame(df_imputed, columns=df_train.columns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BdtdnmqO0WPZ",
-        "outputId": "2c213020-ecde-4473-fe3e-83fffe5e02e4"
-      },
+      "execution_count": 26,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Shape of train_x: (795, 22)\n",
-            "Shape of val_x: (199, 22)\n",
-            "Shape of train_y: (795,)\n",
-            "Shape of val_y: (199,)\n"
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17]\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.utils.class_weight import compute_sample_weight, compute_class_weight\n",
         "\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2)\n",
-        "\n",
-        "print(\"Shape of train_x:\", train_x.shape)\n",
-        "print(\"Shape of val_x:\", val_x.shape)\n",
-        "print(\"Shape of train_y:\", train_y.shape)\n",
-        "print(\"Shape of val_y:\", val_y.shape)\n"
+        "X_train = df_imputed.iloc[:, :-1]\n",
+        "y_train = df_imputed.iloc[:, -1]\n",
+        "scaler = StandardScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "le = LabelEncoder()\n",
+        "y_train = le.fit_transform(y_train)\n",
+        "class_wts = compute_class_weight(class_weight='balanced', classes=np.unique(y_train), y=y_train)\n",
+        "class_wts_dict = dict(zip(np.arange(len(class_wts)), class_wts))\n",
+        "sample_wts = compute_sample_weight(class_weight=class_wts_dict, y=y_train)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -96,59 +102,85 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:737: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Gradient Boosting Accuracy: 0.8743718592964824\n",
-            "Gradient Boosting Macro F1 Score: 0.3549137200025159\n",
+            "[0.44052409        nan        nan        nan 0.49302221]\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py:425: FitFailedWarning: \n",
+            "3 fits failed out of a total of 5.\n",
+            "The score on these train-test partitions for these parameters will be set to nan.\n",
+            "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
             "\n",
-            "Gradient Boosting Classification Report:\n",
-            "               precision    recall  f1-score   support\n",
+            "Below are more details about the failures:\n",
+            "--------------------------------------------------------------------------------\n",
+            "1 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 729, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+            "    return func(**kwargs)\n",
+            "           ^^^^^^^^^^^^^^\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1467, in fit\n",
+            "    raise ValueError(\n",
+            "ValueError: Invalid classes inferred from unique values of `y`.  Expected: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15], got [ 0  1  2  3  4  5  6  7  8  9 10 13 14 15 16 17]\n",
             "\n",
-            "         0.0       0.91      0.96      0.93        50\n",
-            "         1.0       0.94      0.98      0.96       104\n",
-            "         2.0       0.55      0.61      0.58        18\n",
-            "         3.0       0.00      0.00      0.00         0\n",
-            "         4.0       0.00      0.00      0.00         2\n",
-            "         5.0       0.50      0.20      0.29         5\n",
-            "         6.0       1.00      1.00      1.00        11\n",
-            "         7.0       0.00      0.00      0.00         3\n",
-            "         8.0       0.00      0.00      0.00         2\n",
-            "         9.0       0.00      0.00      0.00         2\n",
-            "        13.0       0.00      0.00      0.00         1\n",
-            "        14.0       0.33      1.00      0.50         1\n",
+            "--------------------------------------------------------------------------------\n",
+            "1 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 729, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+            "    return func(**kwargs)\n",
+            "           ^^^^^^^^^^^^^^\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1467, in fit\n",
+            "    raise ValueError(\n",
+            "ValueError: Invalid classes inferred from unique values of `y`.  Expected: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16], got [ 0  1  2  3  4  5  6  7  8  9 11 12 13 14 15 16 17]\n",
             "\n",
-            "    accuracy                           0.87       199\n",
-            "   macro avg       0.35      0.40      0.35       199\n",
-            "weighted avg       0.84      0.87      0.85       199\n",
-            "\n"
+            "--------------------------------------------------------------------------------\n",
+            "1 fits failed with the following error:\n",
+            "Traceback (most recent call last):\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 729, in _fit_and_score\n",
+            "    estimator.fit(X_train, y_train, **fit_params)\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\xgboost\\core.py\", line 729, in inner_f\n",
+            "    return func(**kwargs)\n",
+            "           ^^^^^^^^^^^^^^\n",
+            "  File \"c:\\Python311\\Lib\\site-packages\\xgboost\\sklearn.py\", line 1467, in fit\n",
+            "    raise ValueError(\n",
+            "ValueError: Invalid classes inferred from unique values of `y`.  Expected: [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16], got [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 17]\n",
+            "\n",
+            "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n"
           ]
         }
       ],
       "source": [
         "from sklearn.ensemble import GradientBoostingClassifier\n",
-        "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import make_scorer, f1_score\n",
+        "from sklearn.model_selection import cross_val_score\n",
         "\n",
-        "# Initialize Adaboost model\n",
-        "model = GradientBoostingClassifier(random_state=42, n_estimators=200)\n",
+        "def report_f1(y_true, y_pred):\n",
+        "    return f1_score(y_true, y_pred, average='macro', zero_division=0.0)\n",
+        "\n",
+        "# Initialize model\n",
+        "model = XGBClassifier(random_state=42, n_estimators=200)\n",
         "\n",
         "# Train the model on the training data\n",
-        "model.fit(train_x, train_y)\n",
-        "\n",
-        "# Make predictions on the validation data\n",
-        "predictions = model.predict(val_x)\n",
-        "\n",
-        "# Calculate accuracy and macro F1 score\n",
-        "accuracy = accuracy_score(val_y, predictions)\n",
-        "macro_f1 = f1_score(val_y, predictions, average='macro', zero_division=0.0)\n",
-        "\n",
-        "# Display results\n",
-        "print(\"Gradient Boosting Accuracy:\", accuracy)\n",
-        "print(\"Gradient Boosting Macro F1 Score:\", macro_f1)\n",
-        "\n",
-        "# Classification report for more details\n",
-        "classification_rep = classification_report(val_y, predictions, zero_division=0.0)\n",
-        "print(\"\\nGradient Boosting Classification Report:\\n\", classification_rep)\n"
+        "cv_f1_score = cross_val_score(model, X_train, y_train, scoring=make_scorer(report_f1))\n",
+        "print(cv_f1_score)\n"
       ]
     }
   ],
@@ -170,7 +202,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
