Add new outputs and delete useless models

--- a/assignments/03/test.ipynb
+++ b/assignments/03/test.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 14,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -18,39 +18,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Create imputer object\n",
         "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
         "\n",
-        "df = pd.read_csv('data/iith_foml_2023_train.csv')\n",
-        "y_train = df.iloc[:, -1]\n",
-        "X_train = df.iloc[:, :-1]\n",
+        "df_train = pd.read_csv('data/iith_foml_2023_train.csv')\n",
+        "for column in df_train.columns:\n",
+        "    if df_train[column].isna().any():\n",
+        "        mean_value = df_train[column].mean()\n",
+        "        df_train[column].fillna(mean_value, inplace=True)\n",
+        "y_train = df_train.iloc[:, -1]\n",
+        "X_train = df_train.iloc[:, :-1]\n",
+        "X_train_imputed = X_train\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
         "X_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
-        "imputer.fit(X_train)\n",
+        "# imputer.fit(X_train)\n",
         "\n",
-        "# Transform the dataset to replace missing values\n",
-        "# Convert back to a DataFrame\n",
-        "X_train_imputed = pd.DataFrame(imputer.transform(X_train), columns=X_train.columns)"
+        "# # Transform the dataset to replace missing values\n",
+        "# # Convert back to a DataFrame\n",
+        "# X_train_imputed = pd.DataFrame(imputer.transform(X_train), columns=X_train.columns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_test = pd.read_csv('data/iith_foml_2023_test.csv')\n",
+        "for column in df_test.columns:\n",
+        "    if df_test[column].isna().any():\n",
+        "        mean_value = df_test[column].mean()\n",
+        "        df_test[column].fillna(mean_value, inplace=True)\n",
         "df_test.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
-        "X_test = pd.DataFrame(imputer.transform(df_test), columns=df_test.columns)"
+        "# X_test = pd.DataFrame(imputer.transform(df_test), columns=df_test.columns)\n",
+        "X_test = df_test"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,26 +78,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier\n",
-        "from xgboost import XGBClassifier\n",
+        "from sklearn.ensemble import VotingClassifier, ExtraTreesClassifier, RandomForestClassifier, GradientBoostingClassifier\n",
         "\n",
+        "# Initialize models\n",
         "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
-        "bagging_xgboost_model = BaggingClassifier(estimator=XGBClassifier(random_state=42), random_state=42)\n",
         "randomforest_model = RandomForestClassifier(random_state=42)\n",
-        "\n",
+        "graidentboost_model = GradientBoostingClassifier(random_state=42)\n",
         "\n",
         "model = VotingClassifier(\n",
         "    estimators=[\n",
-        "        ('extratrees', extratrees_model),\n",
-        "        ('bagging_xgboost', bagging_xgboost_model),\n",
-        "        ('randomforest', randomforest_model),\n",
+        "        ('bagging_extratrees', extratrees_model),\n",
+        "        ('bagging_gradboost', randomforest_model),\n",
+        "        ('gradientboost_model', graidentboost_model),\n",
         "    ], voting='hard'\n",
         ")\n",
-        "\n",
         "# Train the model on the training data\n",
         "model.fit(X_train_scaled, y_train)\n",
         "\n",
@@ -96,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,7 +112,7 @@
         "pred_df['Category'] = predictions\n",
         "pred_df['id'] = pred_df.index + 1\n",
         "pred_df = pred_df[['id', 'Category']]\n",
-        "pred_df.to_csv('output/voting_strong_again.csv', index=False)"
+        "pred_df.to_csv('output/voting_drop_preproc.csv', index=False)"
       ]
     }
   ],
@@ -126,7 +134,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
