--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -29,18 +29,25 @@
         "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
         "# Fit the imputer model on the dataset to learn the data patterns\n",
         "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
-        "imputer.fit(df_train)\n",
+        "# imputer.fit(df_train)\n",
         "\n",
         "# Transform the dataset to replace missing values\n",
-        "df_imputed = imputer.transform(df_train)\n",
+        "# df_imputed = imputer.transform(df_train)\n",
         "\n",
         "# Convert back to a DataFrame\n",
-        "df_imputed = pd.DataFrame(df_imputed, columns=df_train.columns)"
+        "# df_imputed = pd.DataFrame(df_imputed, columns=df_train.columns)\n",
+        "for column in df_train.columns:\n",
+        "    if df_train[column].isna().any():\n",
+        "        mean_value = df_train[column].mean()\n",
+        "        df_train[column].fillna(mean_value, inplace=True)\n",
+        "# df_train['Feature 16'].loc[df_train['Target Variable (Discrete)'] == i].fillna(df_train['Feature 16'].loc[df_train['Target Variable (Discrete)'] == i].mean(), inplace=True)\n",
+        "# df_train['Feature 17'].loc[df_train['Target Variable (Discrete)'] == i].fillna(df_train['Feature 17'].loc[df_train['Target Variable (Discrete)'] == i].mean(), inplace=True)\n",
+        "df_imputed = df_train"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -73,7 +80,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/goatsadmin/.pyvenv/lib/python3.10/site-packages/sklearn/model_selection/_split.py:737: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
+            "c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:737: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
             "  warnings.warn(\n"
           ]
         },
@@ -81,14 +88,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[0.44036103 0.47374463 0.39088301 0.46642407 0.51430373]\n"
+            "[0.50433799 0.46510005 0.39800395 0.46135676 0.52526849]\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import VotingClassifier, BaggingClassifier, ExtraTreesClassifier, RandomForestClassifier, GradientBoostingClassifier\n",
+        "from sklearn.ensemble import VotingClassifier, ExtraTreesClassifier, RandomForestClassifier, GradientBoostingClassifier\n",
         "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.metrics import f1_score, classification_report, make_scorer\n",
+        "from sklearn.metrics import f1_score, make_scorer\n",
         "from xgboost import XGBClassifier\n",
         "\n",
         "def report_f1(y_true, y_pred):\n",
@@ -96,22 +103,29 @@
         "\n",
         "# Initialize models\n",
         "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
-        "# bagging_xgboost_model = BaggingClassifier(estimator=XGBClassifier(random_state=42), random_state=42)\n",
         "randomforest_model = RandomForestClassifier(random_state=42)\n",
-        "graidentboost_model = GradientBoostingClassifier(random_state=42, n_estimators=200)\n",
+        "graidentboost_model = GradientBoostingClassifier(random_state=42)\n",
         "\n",
         "model = VotingClassifier(\n",
         "    estimators=[\n",
         "        ('bagging_extratrees', extratrees_model),\n",
-        "        # ('bagging_xgboost', bagging_xgboost_model),\n",
         "        ('bagging_gradboost', randomforest_model),\n",
-        "        ('gradientboost_model', graidentboost_model)\n",
+        "        ('gradientboost_model', graidentboost_model),\n",
         "    ], voting='hard'\n",
         ")\n",
         "\n",
         "# Train the model on the training data\n",
         "cv_f1_score = cross_val_score(model, X_train, y_train, scoring=make_scorer(report_f1))\n",
         "print(cv_f1_score)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_train['Target Variable (Discrete)'].unique()"
       ]
     }
   ],
@@ -133,7 +147,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
