--- a/assignments/03/codes/xgboost_model.ipynb
+++ b/assignments/03/codes/xgboost_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 39,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2, random_state=1337)\n",
+        "train_x, val_x, train_y, val_y = train_test_split(X_train, y_train, test_size=0.2)\n",
         "\n",
         "print(\"Shape of train_x:\", train_x.shape)\n",
         "print(\"Shape of val_x:\", val_x.shape)\n",
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -98,27 +98,26 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "XGBoost Accuracy: 0.914572864321608\n",
-            "XGBoost Macro F1 Score: 0.38958985585064637\n",
+            "XGBoost Accuracy: 0.9095477386934674\n",
+            "XGBoost Macro F1 Score: 0.43913227513227515\n",
             "\n",
             "XGBoost Classification Report:\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "         0.0       0.94      0.98      0.96        49\n",
-            "         1.0       0.94      0.98      0.96       104\n",
-            "         2.0       0.69      0.79      0.73        14\n",
+            "         0.0       0.98      0.98      0.98        54\n",
+            "         1.0       0.91      0.97      0.94        97\n",
+            "         2.0       0.71      0.81      0.76        21\n",
             "         3.0       0.00      0.00      0.00         1\n",
-            "         5.0       0.86      0.55      0.67        11\n",
-            "         6.0       1.00      0.94      0.97        16\n",
-            "         8.0       0.00      0.00      0.00         1\n",
-            "        12.0       0.00      0.00      0.00         1\n",
-            "        13.0       0.00      0.00      0.00         1\n",
-            "        15.0       0.00      0.00      0.00         0\n",
-            "        16.0       0.00      0.00      0.00         1\n",
+            "         4.0       0.00      0.00      0.00         1\n",
+            "         5.0       1.00      0.56      0.71         9\n",
+            "         6.0       1.00      1.00      1.00        12\n",
+            "         8.0       0.00      0.00      0.00         2\n",
+            "         9.0       0.00      0.00      0.00         2\n",
+            "        12.0       0.00      0.00      0.00         0\n",
             "\n",
             "    accuracy                           0.91       199\n",
-            "   macro avg       0.40      0.38      0.39       199\n",
-            "weighted avg       0.90      0.91      0.90       199\n",
+            "   macro avg       0.46      0.43      0.44       199\n",
+            "weighted avg       0.89      0.91      0.90       199\n",
             "\n"
           ]
         }
@@ -128,7 +127,7 @@
         "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
         "\n",
         "# Initialize XGBoost model\n",
-        "xgb_model = XGBClassifier()\n",
+        "xgb_model = XGBClassifier(random_state=42, n_estimators=200)\n",
         "\n",
         "le = LabelEncoder()\n",
         "train_y = le.fit_transform(train_y)\n",
@@ -171,7 +170,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.11.4"
     }
   },
   "nbformat": 4,
