--- a/assignments/03/codes/voting_model.ipynb
+++ b/assignments/03/codes/voting_model.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 81,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -16,57 +16,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 82,
       "metadata": {},
       "outputs": [],
       "source": [
-        "from sklearn.experimental import enable_iterative_imputer\n",
-        "from sklearn.impute import IterativeImputer\n",
-        "\n",
-        "# Assuming df is your DataFrame and 'Feature17' has missing values\n",
-        "imputer = IterativeImputer(max_iter=100, tol=1e-3)\n",
-        "\n",
         "df_train = pd.read_csv('../data/iith_foml_2023_train.csv')\n",
-        "# Fit the imputer model on the dataset to learn the data patterns\n",
-        "df_train.drop(columns=['Feature 16', 'Feature 17'], inplace=True)\n",
-        "# imputer.fit(df_train)\n",
-        "\n",
-        "# Transform the dataset to replace missing values\n",
-        "# df_imputed = imputer.transform(df_train)\n",
-        "\n",
-        "# Convert back to a DataFrame\n",
-        "# df_imputed = pd.DataFrame(df_imputed, columns=df_train.columns)\n",
+        "drop_cols = ['Feature 3 (Discrete)', 'Feature 11', 'Feature 10', 'Feature 23 (Discrete)']\n",
+        "df_train.drop(columns=drop_cols, inplace=True)\n",
         "for column in df_train.columns:\n",
-        "    if df_train[column].isna().any():\n",
-        "        mean_value = df_train[column].mean()\n",
-        "        df_train[column].fillna(mean_value, inplace=True)\n",
-        "# df_train['Feature 16'].loc[df_train['Target Variable (Discrete)'] == i].fillna(df_train['Feature 16'].loc[df_train['Target Variable (Discrete)'] == i].mean(), inplace=True)\n",
-        "# df_train['Feature 17'].loc[df_train['Target Variable (Discrete)'] == i].fillna(df_train['Feature 17'].loc[df_train['Target Variable (Discrete)'] == i].mean(), inplace=True)\n",
-        "df_imputed = df_train"
+        "    mean_value = df_train[column].mean()\n",
+        "    df_train[column].fillna(mean_value, inplace=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [],
       "source": [
         "from sklearn.utils.class_weight import compute_sample_weight, compute_class_weight\n",
         "\n",
-        "X_train = df_imputed.iloc[:, :-1]\n",
-        "y_train = df_imputed.iloc[:, -1]\n",
+        "X_train = df_train.iloc[:, :-1]\n",
+        "y_train = df_train.iloc[:, -1]\n",
         "scaler = StandardScaler()\n",
-        "X_train = scaler.fit_transform(X_train)\n",
-        "le = LabelEncoder()\n",
-        "y_train = le.fit_transform(y_train)\n",
-        "class_wts = compute_class_weight(class_weight='balanced', classes=np.unique(y_train), y=y_train)\n",
-        "class_wts_dict = dict(zip(np.arange(len(class_wts)), class_wts))\n",
-        "sample_wts = compute_sample_weight(class_weight=class_wts_dict, y=y_train)"
+        "X_train = scaler.fit_transform(X_train)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 84,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -77,55 +55,49 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "c:\\Python311\\Lib\\site-packages\\sklearn\\model_selection\\_split.py:737: UserWarning: The least populated class in y has only 1 members, which is less than n_splits=5.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[0.50433799 0.46510005 0.39800395 0.46135676 0.52526849]\n"
+            "Macro F1 Score: 0.4173245806621586\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import VotingClassifier, ExtraTreesClassifier, RandomForestClassifier, GradientBoostingClassifier\n",
-        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.ensemble import VotingClassifier, StackingClassifier, ExtraTreesClassifier, RandomForestClassifier, GradientBoostingClassifier, BaggingClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import cross_val_score, train_test_split\n",
         "from sklearn.metrics import f1_score, make_scorer\n",
-        "from xgboost import XGBClassifier\n",
         "\n",
         "def report_f1(y_true, y_pred):\n",
         "    return f1_score(y_true, y_pred, average='macro', zero_division=0.0)\n",
         "\n",
         "# Initialize models\n",
-        "extratrees_model = ExtraTreesClassifier(random_state=42)\n",
-        "randomforest_model = RandomForestClassifier(random_state=42)\n",
-        "graidentboost_model = GradientBoostingClassifier(random_state=42)\n",
+        "extratrees_model = ExtraTreesClassifier(random_state=42, bootstrap=False, n_jobs=-1)\n",
+        "randomforest_model = RandomForestClassifier(random_state=42, bootstrap=False, n_jobs=-1)\n",
+        "gradientboost_model = GradientBoostingClassifier(random_state=42)\n",
+        "bagging_model = BaggingClassifier(random_state=42, n_jobs=-1)\n",
+        "knn_model = KNeighborsClassifier(n_jobs=-1)\n",
+        "knn_model_2 = KNeighborsClassifier(n_jobs=-1)\n",
         "\n",
-        "model = VotingClassifier(\n",
+        "model = StackingClassifier(\n",
         "    estimators=[\n",
-        "        ('bagging_extratrees', extratrees_model),\n",
-        "        ('bagging_gradboost', randomforest_model),\n",
-        "        ('gradientboost_model', graidentboost_model),\n",
-        "    ], voting='hard'\n",
+        "        ('gradientboost_model', gradientboost_model),\n",
+        "        # ('randomforest_model', randomforest_model),\n",
+        "        ('extratrees_model', extratrees_model),\n",
+        "        # ('knn_model', knn_model),\n",
+        "        # ('knn_model_2', knn_model_2),\n",
+        "        # ('bagging_model', bagging_model)\n",
+        "    ], \n",
+        "    n_jobs=-1,\n",
+        "    final_estimator=knn_model,\n",
         ")\n",
         "\n",
-        "# Train the model on the training data\n",
-        "cv_f1_score = cross_val_score(model, X_train, y_train, scoring=make_scorer(report_f1))\n",
-        "print(cv_f1_score)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df_train['Target Variable (Discrete)'].unique()"
+        "# Cross validate the model\n",
+        "X_train_cv, X_test_cv, y_train_cv, y_test_cv = train_test_split(X_train, y_train, test_size=0.2)\n",
+        "model.fit(X_train_cv, y_train_cv)\n",
+        "y_pred_cv = model.predict(X_test_cv)\n",
+        "macro_f1 = f1_score(y_test_cv, y_pred_cv, average='macro')\n",
+        "print(f'Macro F1 Score: {macro_f1}')"
       ]
     }
   ],
