Push latest code

--- a/assignments/03/test_pca.ipynb
+++ b/assignments/03/test_pca.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 50,
       "metadata": {
         "id": "ftGaqLZDbwIX"
       },
@@ -11,18 +11,17 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.preprocessing import StandardScaler"
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.decomposition import PCA"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_train = pd.read_csv('data/iith_foml_2023_train.csv')\n",
-        "drop_cols = ['Feature 3 (Discrete)', 'Feature 10', 'Feature 14', 'Feature 16', 'Feature 17', 'Feature 23 (Discrete)']\n",
-        "df_train.drop(columns=drop_cols, inplace=True)\n",
         "for column in df_train.columns:\n",
         "    if df_train[column].isna().any():\n",
         "        mean_value = df_train[column].mean()\n",
@@ -33,12 +32,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_test = pd.read_csv('data/iith_foml_2023_test.csv')\n",
-        "df_test.drop(columns=drop_cols, inplace=True)\n",
         "for column in df_test.columns:\n",
         "    if df_test[column].isna().any():\n",
         "        mean_value = df_test[column].mean()\n",
@@ -48,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -59,7 +57,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 54,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pca = PCA(n_components=10)\n",
+        "X_train = pca.fit_transform(X_train)\n",
+        "X_test = pca.transform(X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -70,7 +79,7 @@
         "\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "# Initialize models\n",
-        "model = KNeighborsClassifier(n_neighbors=7, n_jobs=-1, weights='distance')\n",
+        "model = KNeighborsClassifier(n_neighbors=9, n_jobs=-1, weights='distance')\n",
         "\n",
         "# Train the model on the training data\n",
         "model.fit(X_train, y_train)\n",
@@ -80,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -88,7 +97,7 @@
         "pred_df['Category'] = predictions\n",
         "pred_df['id'] = pred_df.index + 1\n",
         "pred_df = pred_df[['id', 'Category']]\n",
-        "pred_df.to_csv('output/oversample_knn_evenmoredrop.csv', index=False)"
+        "pred_df.to_csv('output/oversample_knn_pca_10.csv', index=False)"
       ]
     }
   ],
